# Dj_project

./: pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: contacts.html
config/: settings.py
